Fix scrollbar styling

--- a/style.css
+++ b/style.css
@@ -361,9 +361,9 @@ html {
 /* Ingredient Details Section */
 
 .ingredients__details {
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
-    scrollbar-gutter: stable;
+    scrollbar-gutter: auto;
     flex: 1;
     padding-right: 25px;
 }
